libraryservice-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bookservice
  labels:
    app: bookservice
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: bookservice
