libraryservice-canary.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: libraryservice
spec:
  host: libraryservice
  subsets:
  - name: blue
    labels:
      deploy_state: blue
  - name: green
    labels:
      deploy_state: green
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: libraryservice
spec:
  hosts:
  - libraryservice
  http:
  - route:
    - destination:
        host: libraryservice
        subset: blue
      weight: 50
    - destination:
        host: libraryservice
        subset: green
      weight: 50
