libraryservice-istio-route_template.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: libraryservice
spec:
  host: libraryservice
  subsets:
  - name: blue
    labels:
      version: "%%BUILD_NUMBER%%"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: libraryservice
spec:
  hosts:
  - libraryservice
  http:
  - route:
    - destination:
        host: libraryservice
        subset: blue
